[add] conditions and scraper admin

--- a/deployment/.env
+++ b/deployment/.env
@@ -1,3 +1,7 @@
 # NODE_SCRAPER
 NODE_SCRAPER_HOST=node_scraper
 NODE_SCRAPER_PORT=4000
+
+# SCRAPER_ADMIN
+SCRAPER_ADMIN_HOST=scraper_admin
+SCRAPER_ADMIN_PORT=5000
