--- a/node_scraper/package.json
+++ b/node_scraper/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@koa/cors": "2.2.3",
+    "axios": "^0.20.0",
     "koa": "2.7.0",
     "koa-bodyparser": "4.2.1",
     "koa-compress": "3.0.0",
