--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -6,8 +6,8 @@ services:
   meli-node-scraper:
     image: meli/node-scraper
     container_name: meli-node-scraper
-    # command: bash -c "npm install && npm start"
-    command: /bin/sh -c "while true; do echo hello world; sleep 1; done"
+    command: bash -c "npm install && npm start"
+    # command: /bin/sh -c "while true; do echo hello world; sleep 1; done"
     volumes:
       - ../node_scraper:/opt/app/
     env_file:
@@ -22,8 +22,8 @@ services:
   meli-scraper-admin:
     image: meli/scraper-admin
     container_name: meli-scraper-admin
-    # command: bash -c "python manage.py runserver 0.0.0.0:${SCRAPER_ADMIN_PORT}"
-    command: /bin/sh -c "while true; do echo hello world; sleep 1; done"
+    command: bash -c "python manage.py runserver 0.0.0.0:${SCRAPER_ADMIN_PORT}"
+    # command: /bin/sh -c "while true; do echo hello world; sleep 1; done"
     volumes:
       - ../scraper_admin:/opt/app/
     env_file:
